<?xml version="1.0" encoding="utf-8"?>

<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content" >

    <ScrollView android:id="@+id/iphone_6_7_8___1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <RelativeLayout
        android:id="@+id/login"
        android:layout_width="389dp"
        android:layout_height="51dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">


        <RelativeLayout
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp">

            <TextView
                android:id="@+id/sign_up_ek1"
                android:layout_width="61dp"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginLeft="157dp"
                android:layout_marginTop="14dp"
                android:fontFamily="Arial"
                android:gravity="center"
                android:text="@string/sign_up_ek1_string"
                android:textColor="@color/email_ek1_color"
                android:textSize="15sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/rectangle_120"
                android:layout_width="409dp"
                android:layout_height="48dp"
                android:background="@drawable/rectangle_120_shape" />

        </RelativeLayout>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/continue_ek1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_ek3">

        <TextView
            android:id="@+id/log_in"
            android:layout_width="49dp"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal|center"
            android:layout_marginLeft="139dp"
            android:layout_marginTop="14dp"
            android:fontFamily="Arial"
            android:gravity="center"
            android:text="@string/log_in_string"
            android:textColor="@color/sign_up_color"
            android:textSize="15sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/rectangle_119_ek1"
            android:layout_width="327dp"
            android:layout_height="48dp"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/rectangle_119_ek1_shape" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="167dp"
        android:layout_marginLeft="167dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:text="@string/new_to_saneh__string"
        android:textColor="@color/email_ek1_color"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/continue_ek1" />


    <RelativeLayout
        android:id="@+id/password_ek3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_ek2">

        <RelativeLayout
            android:id="@+id/lock_ek3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp">

            <ImageView
                android:id="@+id/path_49_ek3"
                android:layout_width="14dp"
                android:layout_height="16dp"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="0dp"
                android:contentDescription="path_49_ek3"
                android:src="@drawable/path_49_ek3" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/path_49_ek3" />

            <View
                android:id="@+id/rectangle_118_ek3"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/rectangle_118_ek3_shape" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/path_49_ek3" />

        </RelativeLayout>

        <TextView
            android:id="@+id/________"
            android:layout_width="64dp"
            android:layout_height="19dp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="0dp"
            android:alpha="0.5"
            android:fontFamily="Arial"
            android:text="@string/_________string"
            android:textColor="@color/email_ek1_color"
            android:textSize="14sp" />


        <View
            android:id="@+id/rectangle_116_ek3"
            android:layout_width="327dp"
            android:layout_height="1dp"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="33dp"
            android:background="@drawable/rectangle_116_ek3_shape" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/email_ek2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navigation_bar_ek1">

        <RelativeLayout
            android:id="@+id/mail_ek1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="3dp">

            <ImageView
                android:id="@+id/path_642_ek1"
                android:layout_width="16dp"
                android:layout_height="12dp"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:contentDescription="path_642_ek1"
                android:src="@drawable/path_642_ek1" />

        </RelativeLayout>

        <TextView
            android:id="@+id/johndoe_mail_com"
            android:layout_width="126dp"
            android:layout_height="19dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="0dp"
            android:alpha="0.5"
            android:fontFamily="Arial"
            android:text="@string/johndoe_mail_com_string"
            android:textColor="@color/email_ek1_color"
            android:textSize="14sp" />


        <View
            android:id="@+id/rectangle_115_ek1"
            android:layout_width="327dp"
            android:layout_height="1dp"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="33dp"
            android:background="@drawable/rectangle_115_ek1_shape" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/navigation_bar_ek1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/backward_arrow_ek1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp">

            <ImageView
                android:id="@+id/path_10_ek1"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:contentDescription="path_10_ek1"
                android:src="@drawable/path_10_ek1" />



        </RelativeLayout>


        <View
            android:id="@+id/rectangle_69_ek1"
            android:layout_width="375dp"
            android:layout_height="48dp"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle_69_ek1_shape" />


        <View
            android:id="@+id/rectangle_68_ek1"
            android:layout_width="375dp"
            android:layout_height="65dp"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/rectangle_68_ek1_shape" />

    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</HorizontalScrollView>